# Trad

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  pytest.py
.github/workflows/: paper-gates.yml
configs/: data_sources.yml  futures_micro.yml  llm_local_models.json  paper_daily.yml  permissions.yml  risk.yml  universe.yml  universe_liquid_etfs.yml
data/processed/: features.csv
data/raw/: etfs.csv  etfs.manifest.json
docs/: audit-2026-06-25-offline.md  audit-2026-06-26-prelive-complete.md  codex-capabilities-for-trading-bot.md  futures-micro-platform-decision.md  hardware-model-sizing.md  live-transition-sprints.md  model-evaluation-policy.md  paper-quickstart.md  paper-real-runbook.md  third-party-skills-plugins-open-source-ai-review.md  threat-model-2026-06-24-algoritmic-ia.md  threat-model-2026-06-26-prelive.md  tooling-risk-register.md  trading-bot-ai-research.md  trading-bot-systems-guide.md
docs/superpowers/plans/: 2026-06-16-trading-ai-research-mvp.md  2026-06-18-paper-operation-next-sprints.md  2026-06-18-paper-to-live-hardening.md  2026-06-26-prelive-fix-plan.md
models/: latest_model.json
notebooks/: benchmark_baseline_vs_ml_vs_timeseries.ipynb
reports/: alpaca_paper_status_after_signal_order.json  baseline_classifier_metrics.json  latest_model_eval.json  paper_kill_switch_test.json
reports/historical/legacy-smoke/: alpaca_order_signal_spy.json  alpaca_paper_status_real.json  alpaca_signal_order_dry_run.json  alpaca_signal_order_real.json  alpaca_signal_order_reconciliation.json  latest_backtest.json  latest_model_run.json  latest_promotion_decision.json  llm_guardrail_eval.json  paper_status.json  report.md
scripts/: clean-local-artifacts.sh  run-live-canary.sh  run-llm-local-training.sh  run-paper-auto-cycle.sh  run-paper-daily-safe.sh  verify-adaptive-routing.sh  verify-adaptive-training.sh  verify-llm-supervision.sh  verify-paper-artifacts.sh  verify-paper-environment.sh  verify-paper-focused.sh  verify-paper-gates.sh  verify-release-minimal.sh  verify-release.sh  verify-safety-patterns.py
scripts/lib/: python-bin.sh
src/trading_ai/: __init__.py  cli.py  cli_paper.py  config.py
src/trading_ai/backtest/: engine.py
src/trading_ai/data/: __init__.py  catalog.py  freshness.py  io.py  manifest.py  (+4 more)
tests/: conftest.py  test_adaptive_training_cycle.py  test_alpaca_paper_connection.py  test_alpaca_paper_execution.py  test_alpaca_retry_idempotency.py  test_approved_data_evaluation.py  test_canary_sizing.py  test_config_loading.py  test_data_catalog.py  test_data_features_backtest.py  test_data_integrity.py  test_data_refresh.py  test_drift_monitoring.py  test_evaluation_registry.py  test_fill_reconciliation_and_costs.py  test_futures_readiness_report.py  test_futures_research_scaffold.py  test_intraday_canary_policy.py  test_live_alpaca_connection.py  test_live_alpaca_execution.py  test_live_circuit_breaker.py  test_live_eligibility_scorecard.py  test_live_execute_session.py  test_live_observability.py  test_live_readiness.py  test_live_reconciliation.py  test_live_rehearsal.py  test_live_safe_flatten.py  test_live_stage_policy.py  test_llm_adaptive_review.py  test_llm_candidate_report.py  test_llm_context_pack.py  test_llm_eval_suite.py  test_llm_guardrails.py  test_llm_local_registry.py  test_llm_local_workflow.py  test_llm_model_alias_decision.py  test_llm_paper_review.py  test_llm_role_registry.py  test_llm_signal_proposals.py  (+56 more)
(+100 files in other folders)
