[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai-research"
version = "0.1.0"
description = "Research-only scaffold for AI-assisted trading system evaluation."
readme = "README.md"
authors = [{ name = "Algoritmic IA" }]
license = { text = "Proprietary" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "PyYAML>=6,<7",
]

[project.scripts]
trading-ai = "trading_ai.cli:main"

[project.optional-dependencies]
research = [
  "pandas>=2.2,<3",
  "polars>=1.0,<2",
  "pyarrow>=15,<23",
  "scikit-learn>=1.4,<2",
  "statsmodels>=0.14,<1",
]
ml = [
  "lightgbm>=4,<5",
  "xgboost>=2,<4",
  "optuna>=4,<5",
]
monitoring = [
  "mlflow>=2.12,<4",
  "evidently>=0.7,<1",
  "pandera>=0.20,<1",
]
forecasting = [
  "torch>=2.4,<3",
  "transformers>=4.45,<6",
  "accelerate>=1,<2",
  "peft>=0.13,<1",
  "sentence-transformers>=3,<6",
  "datasets>=3,<5",
  "timesfm>=1,<2",
  "chronos-forecasting>=1,<2",
]
broker = [
  "alpaca-py>=0.43,<1",
]
notebook = [
  "jupyterlab>=4,<5",
  "ipykernel>=6,<8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
