[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai-research"
version = "0.1.0"
description = "Research-only scaffold for AI-assisted trading system evaluation."
readme = "README.md"
authors = [{ name = "Algoritmic IA" }]
license = { text = "Proprietary" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "PyYAML>=6,<7",
]

[project.scripts]
trading-ai = "trading_ai.cli:main"

[project.optional-dependencies]
research = [
  "pandas>=2.2,<3",
  "polars>=1.0,<2",
  "pyarrow>=15,<23",
  "scikit-learn>=1.4,<2",
  "statsmodels>=0.14,<1",
]
ml = [
  "lightgbm>=4,<5",
  "xgboost>=2,<4",
  "optuna>=4,<5",
]
monitoring = [
  "mlflow>=2.12,<4",
  "evidently>=0.7,<1",
  "pandera>=0.20,<1",
]
local-llm = [
  "torch>=2.4,<3",
  "transformers>=4.45,<6",
  "accelerate>=1,<2",
  "peft>=0.13,<1",
  "trl>=0.12,<1",
  "datasets>=3,<5",
  "huggingface_hub>=0.23,<2",
  "safetensors>=0.4,<1",
]
forecasting = [
  "torch>=2.4,<3",
  "transformers>=4.45,<6",
  "accelerate>=1,<2",
  "peft>=0.13,<1",
  "trl>=0.12,<1",
  "sentence-transformers>=3,<6",
  "datasets>=3,<5",
  "timesfm>=1,<2",
  "chronos-forecasting>=1,<2",
]
broker = [
  "alpaca-py>=0.43,<1",
]
notebook = [
  "jupyterlab>=4,<5",
  "ipykernel>=6,<8",
]
dev = [
  "bandit>=1.7,<2",
  "mypy>=1.10,<2",
  "pip-audit>=2.7,<3",
  "ruff>=0.6,<1",
  "types-PyYAML>=6,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".venv*",
  "reports/tmp",
  "data/raw/approved",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = [
  "S101",  # unittest assertions are the project test style
  "S603",  # gate scripts intentionally invoke fixed local commands
  "S607",  # project scripts intentionally use PATH-resolved python/git tools
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
exclude = [
  "^reports/tmp/",
  "^data/raw/approved/",
  "^\\.venv",
]
